Elastic/haproxy.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: haproxy
  labels:
    app: haproxy
  namespace: elastic
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: haproxy
    spec:
      containers:
      - name: haproxy
        image: haproxy:2.0.5-alpine
        volumeMounts:
        - name: config
          mountPath: "/usr/local/etc/haproxy/haproxy.cfg"
          subPath: "haproxy.cfg"
        ports:
        - name: http
          containerPort: 80
          hostPort: 3045
          protocol: TCP
      volumes:
        - name: config
          configMap:
            defaultMode: 0600
            name: haproxy-config
      restartPolicy: Always
      nodeSelector:
        kubernetes.io/hostname: "htz1"
