Elastic/elasticsearch.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: elastic
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: elastic
spec:
  selector:
    matchLabels:
      name: elasticsearch
  replicas: 1
  template:
    metadata:
      labels:
        name: elasticsearch
    spec:
      containers:
      - name: elasticsearch-master1
        image: docker.elastic.co/elasticsearch/elasticsearch:7.3.2
        volumeMounts:
        - name: config
          mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
          readOnly: true
          subPath: elasticsearch.yml
      volumes:
      - name: config
        configMap:
          defaultMode: 0777
          name: elasticsearch-config
      restartPolicy: Always
      nodeSelector:
        kubernetes.io/hostname: "htz1"
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: elastic
spec:
  ports:
    - name: http
      port: 9200
      targetPort: 9200
      protocol: TCP
    - name: cluster-comms
      port: 9300
      targetPort: 9300
      protocol: TCP
  selector:
    name: elasticsearch
