Elastic/fleet.yml
# https://www.gooksu.com/2021/09/fleet-server-with-elasticsearch-in-docker-container/
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fleet-server
  namespace: elastic
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      name: fleet-server
  template:
    metadata:
      labels:
        name: fleet-server
    spec:
      serviceAccountName: fleet-server
      containers:
        - name: fleet-server
          image: docker.elastic.co/beats/elastic-agent:8.5.3
          securityContext:
            runAsUser: 0
          volumeMounts:
          - name: elasticsearch-ca
            mountPath: /elasticsearch-ca.pem
            readOnly: true
            subPath: elasticsearch-ca.pem
      volumes:
        - name: elasticsearch-ca
          secret:
            secretName: elasticsearch-ca
---
apiVersion: v1
kind: Service
metadata:
  name: fleet-server
  namespace: elastic
  labels:
    name: fleet-server
spec:
  ports:
    - name: http
      port: 8220
      targetPort: 8220
  selector:
    name: fleet-server
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: fleet-server
  namespace: elastic
spec:
  entryPoints:
    - https
  routes:
  - match: Host(`mon3.rudenspavasaris.id.lv`)
    kind: Rule
    services:
    - name: fleet-server
      port: 8220
  tls:
    certResolver: default
