Elastic/ingress.yml
######### Kibana
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: elastic
  labels:
    name: kibana
spec:
  ports:
    - name: http
      port: 5601
      targetPort: 5601
  selector:
    name: kibana
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kibana
  namespace: elastic
spec:
  entryPoints:
    - https
  routes:
  - match: Host(`mon1.rudenspavasaris.id.lv`)
    kind: Rule
    services:
    - name: kibana
      port: 5601
  tls:
    certResolver: default
######### Elasticsearch
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: elasticsearch
  namespace: elastic
spec:
  entryPoints:
    - https
  routes:
  - match: Host(`mon2.rudenspavasaris.id.lv`)
    kind: Rule
    services:
    - name: elasticsearch
      port: 9200
      targetPort: 9200
  tls:
    certResolver: default
---
# Can't yet figure out why this gives Bad Gateway. Shrug.
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: es-ingest
  namespace: elastic
spec:
  entryPoints:
    - https
  routes:
  - match: Host(`mon4.rudenspavasaris.id.lv`)
    kind: Rule
    services:
    - name: es-ingest
      port: 9200
      targetPort: 9200
  tls:
    certResolver: default
    # passthrough: true
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: ServersTransport
# metadata:
#   name: es-ingest
#   namespace: elastic
# spec:
#   insecureSkipVerify: true
######### Logstash
---
apiVersion: v1
kind: Service
metadata:
  name: logstash
  namespace: elastic
  labels:
    name: logstash
spec:
  ports:
    - name: beats
      port: 5000
      targetPort: 5000
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    name: logstash
---
apiVersion: v1
kind: Service
metadata:
  name: logstash-tcp
  namespace: elastic
  labels:
    name: logstash
spec:
  type: NodePort
  ports:
    - name: beats
      port: 5000
      nodePort: 30001
    - name: tcp
      port: 8088
      nodePort: 30002
    - name: syslog
      port: 8888
      nodePort: 30003
  selector:
    name: logstash
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: logstash
  namespace: elastic
spec:
  entryPoints:
    - https
  routes:
  - match: Host(`mon3.rudenspavasaris.id.lv`)
    kind: Rule
    services:
    - name: logstash
      port: 8080
  tls:
    certResolver: default
######### apm-server
---
apiVersion: v1
kind: Service
metadata:
  name: apm-server
  namespace: elastic
  labels:
    name: apm-server
spec:
  ports:
    - name: http
      port: 8200
      targetPort: 8200
  selector:
    name: apm-server
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: apm-server
  namespace: elastic
spec:
  entryPoints:
    - https
  routes:
  - match: Host(`apm.rudenspavasaris.id.lv`)
    kind: Rule
    services:
    - name: apm-server
      port: 8200
  tls:
    certResolver: default

################### Traefik V1
######### Kibana
# ---
# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: kibana-mon1
#   namespace: elastic
#   annotations:
#     kubernetes.io/ingress.class: traefik
#     traefik.frontend.rule.type: PathPrefixStrip
# spec:
#   rules:
#   - host: mon1.rudenspavasaris.id.lv
#     http:
#       paths:
#       - path: /
#         backend:
#           serviceName: kibana
#           servicePort: http
# ######### Elasticsearch
# ---
# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: elasticsearch
#   namespace: elastic
#   annotations:
#     kubernetes.io/ingress.class: traefik
#     traefik.frontend.rule.type: PathPrefixStrip
# spec:
#   rules:
#   - host: mon2.rudenspavasaris.id.lv
#     http:
#       paths:
#       - path: /
#         backend:
#           serviceName: elasticsearch
#           servicePort: http
# ######### Logstash
# ---
# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: logstash
#   namespace: elastic
#   annotations:
#     kubernetes.io/ingress.class: traefik
#     traefik.frontend.rule.type: PathPrefixStrip
# spec:
#   rules:
#   - host: mon3.rudenspavasaris.id.lv
#     http:
#       paths:
#       - path: /
#         backend:
#           serviceName: logstash
#           servicePort: http
