Elastic/kibana.yaml
# https://www.elastic.co/guide/en/kibana/current/docker.html
# https://mon1.rudenspavasaris.id.lv/status
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: elastic
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      name: kibana
  template:
    metadata:
      labels:
        name: kibana
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:8.11.1
        volumeMounts:
        - name: config
          mountPath: /usr/share/kibana/config/kibana.yaml
          readOnly: true
          subPath: kibana.yaml
        - name: elasticsearch-ca
          mountPath: /usr/share/kibana/config/elasticsearch-ca.pem
          readOnly: true
          subPath: elasticsearch-ca.pem
      volumes:
      - name: config
        configMap:
          defaultMode: 0666
          name: kibana-config
      - name: elasticsearch-ca
        secret:
          secretName: elasticsearch-ca
      restartPolicy: Always
      nodeSelector:
        kubernetes.io/hostname: "htz1"
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: elastic
  labels:
    name: kibana
spec:
  ports:
    - name: http
      port: 5601
      targetPort: 5601
  selector:
    name: kibana
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kibana
  namespace: elastic
spec:
  entryPoints:
    - https
  routes:
  - match: Host(`mon1.rudenspavasaris.id.lv`)
    kind: Rule
    services:
    - name: kibana
      port: 5601
  tls:
    certResolver: default
